--- a/data/sources/typedb-prague.yaml
+++ b/data/sources/typedb-prague.yaml
@@ -1273,9 +1273,9 @@ series:
         dtstart: 2022-06-09 18:30:00+02:00
         dtend: 2022-06-09 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jun 14, 6:30 PM  CEST: TypeDB is a strongly-typed database. It provides a rich and logical type system which breaks down complex problems into meaningful and logical systems, using TypeQL as its '
-      og_title: Introduction to TypeDB and TypeQL | A Strongly-Typed Database, Tue, Jun 14, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/typedb-prague/events/286111477/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Introduction to TypeDB and TypeQL | A Strongly-Typed Database
         description: 'TypeDB Prague Engineers
@@ -1757,3 +1757,27 @@ series:
         url: https://www.meetup.com/typedb-prague/events/286110971/
         dtstart: 2022-06-09 18:30:00+02:00
         dtend: 2022-06-09 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Tue, Jun 28, 6:30 PM  CEST: Loading a lot of data into a graph database is not a trivial exercise. TypeDB Loader (formerly known as GraMi) was developed to allow large-scale data import into TypeDB, a'
+      og_title: Loading Huge Amounts of Data, Tue, Jun 28, 2022, 6:30 PM   | Meetup
+      url: https://www.meetup.com/typedb-prague/events/286133573/
+      ical:
+        summary: Loading Huge Amounts of Data
+        description: 'TypeDB Prague Engineers
+
+          Tuesday, June 28 at 6:30 PM
+
+
+          Loading a lot of data into a graph database is not a trivial exercise. TypeDB Loader (formerly known as GraMi) was developed to allow large-scale data...
+
+
+          https://www.meetup.com/typedb-prague/events/286133573/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286133573@meetup.com
+        url: https://www.meetup.com/typedb-prague/events/286133573/
+        dtstart: 2022-06-28 18:30:00+02:00
+        dtend: 2022-06-28 19:30:00+02:00
