--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -1473,14 +1473,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/gdgprague/events/xqcsqsydckbhb/'
+          https://www.meetup.com/gdgprague/events/286591080/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsydckbhb@meetup.com
-        url: https://www.meetup.com/gdgprague/events/xqcsqsydckbhb/
+        url: https://www.meetup.com/gdgprague/events/286591080/
         dtstart: 2022-07-05 18:30:00+02:00
         dtend: 2022-07-05 20:30:00+02:00
   - meetupcom:
@@ -4208,21 +4208,9 @@ series:
         dtstart: 2022-05-24 18:30:00+02:00
         dtend: 2022-05-24 20:30:00+02:00
   - meetupcom:
-      meta_description: 'Tue, Jun 7, 6:30 PM  CEST: • How to join?
-
-        Online only because of covid https://discord.gg/TnaMJMyTDw
-
-
-        • What we''ll do
-
-        https://sites.google.com/site/garagepragueone/home
-
-
-        http://gdg-garage.github.io/
-
-        '
-      og_title: GDG Garage Prague One, Tue, Jun 7, 2022, 6:30 PM   | Meetup
-      url: https://www.meetup.com/gdgprague/events/xqcsqsydcjbkb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: GDG Garage Prague One
         description: 'GDG Prague
@@ -4233,14 +4221,14 @@ series:
           • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
 
 
-          https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/'
+          https://www.meetup.com/gdgprague/events/285990786/'
         location: Online event
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_xqcsqsydcjbkb@meetup.com
-        url: https://www.meetup.com/GDGPrague/events/xqcsqsydcjbkb/
+        url: https://www.meetup.com/gdgprague/events/285990786/
         dtstart: 2022-06-07 18:30:00+02:00
         dtend: 2022-06-07 20:30:00+02:00
   - meetupcom:
