--- a/data/sources/purestorage.yaml
+++ b/data/sources/purestorage.yaml
@@ -1513,11 +1513,9 @@ series:
         dtstart: 2022-04-07 18:00:00+02:00
         dtend: 2022-04-07 19:30:00+02:00
   - meetupcom:
-      meta_description: 'Thu, Jun 2, 6:00 PM  CEST: **IMPORTANT! This is a hybrid event.**
-
-        **Take just a minute to register [here](https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81cByUmfiLMV8eg/vi'
-      og_title: Can You Land a Job in Tech without a CS Degree?, Thu, Jun 2, 2022, 6:00 PM   | Meetup
-      url: https://www.meetup.com/pure-storage-talks/events/285674292/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: Can You Land a Job in Tech without a CS Degree?
         description: 'Pure Storage Talks
@@ -1528,14 +1526,14 @@ series:
           **IMPORTANT! This is a hybrid event.****Take just a minute to register (https://docs.google.com/forms/d/e/1FAIpQLSfrjEd73wmXPJwdfuOx_7V3PmoXvzuCwDD81c...
 
 
-          https://www.meetup.com/Pure-Storage-Talks/events/285674292/'
+          https://www.meetup.com/pure-storage-talks/events/285674292/'
         location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
         geo:
           lat: 50.08
           lon: 14.43
         status: CONFIRMED
         uid: event_285674292@meetup.com
-        url: https://www.meetup.com/Pure-Storage-Talks/events/285674292/
+        url: https://www.meetup.com/pure-storage-talks/events/285674292/
         dtstart: 2022-06-02 18:00:00+02:00
         dtend: 2022-06-02 19:30:00+02:00
   - meetupcom:
@@ -4383,3 +4381,27 @@ series:
         url: https://www.meetup.com/pure-storage-talks/events/286435658/
         dtstart: 2022-06-16 18:00:00+02:00
         dtend: 2022-06-16 19:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Jun 30, 5:30 PM  CEST: \*\*Make sure you book your spot at [Eventbrite ](https://www.eventbrite.com/e/stand-out-from-the-crowd-how-to-land-a-highly-paid-technical-job-registration-367486460897)\*'
+      og_title: Stand out from the crowd. How to land a highly-paid technical job., Thu, Jun 30, 2022, 5:30 PM   | Meetup
+      url: https://www.meetup.com/pure-storage-talks/events/286587285/
+      ical:
+        summary: Stand out from the crowd. How to land a highly-paid technical job.
+        description: 'Pure Storage Talks
+
+          Thursday, June 30 at 5:30 PM
+
+
+          \\*\\*Make sure you book your spot at (https://www.eventbrite.com/e/stand-out-from-the-crowd-how-to-land-a-highly-paid-technical-job-registration-367486...
+
+
+          https://www.meetup.com/pure-storage-talks/events/286587285/'
+        location: Amazon Court (Rohanské nábř. 661/5, Rohanský ostrov, Praha-Praha 8, Czech Republic 186 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_286587285@meetup.com
+        url: https://www.meetup.com/pure-storage-talks/events/286587285/
+        dtstart: 2022-06-30 17:30:00+02:00
+        dtend: 2022-06-30 20:00:00+02:00
