--- a/data/sources/pyvo-praha.yaml
+++ b/data/sources/pyvo-praha.yaml
@@ -91,12 +91,9 @@ series:
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: Potkáme se v Holešovické šachtě. Bude jedna přednáška, lightning talky a volná zábava - buřty jsou objednané.
-
-
-        We meet at the Holešovická šachta. You can look forward to on'
-      og_title: 'Pyvo Prague #133 Using OpenCV in Python to process videos and read barcodes, Wed, Jun 15, 2022, 7:00 PM   | Meetup'
-      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcjbtb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'Pyvo Prague #133 Using OpenCV in Python to process videos and read barcodes'
         description: 'Pyvo: Prague Python Meetup
@@ -8793,3 +8790,27 @@ series:
         url: https://www.meetup.com/pyvo-prague-python-meetup/events/285521261/
         dtstart: 2022-05-18 19:00:00+02:00
         dtend: 2022-05-18 23:59:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 19, 7:00 PM  CEST: We will meet for an informal chat about Python, programming, and more. Details will be added.'
+      og_title: 'Pyvo Prague #, Wed, Oct 19, 2022, 7:00 PM   | Meetup'
+      url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
+      ical:
+        summary: 'Pyvo Prague #'
+        description: 'Pyvo: Prague Python Meetup
+
+          Wednesday, October 19 at 7:00 PM
+
+
+          We will meet for an informal chat about Python, programming, and more. Details will be added.
+
+
+          https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/'
+        location: Prague (, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_bcxlssydcnbzb@meetup.com
+        url: https://www.meetup.com/pyvo-prague-python-meetup/events/bcxlssydcnbzb/
+        dtstart: 2022-10-19 19:00:00+02:00
+        dtend: 2022-10-19 23:59:00+02:00
