--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -6500,12 +6500,9 @@ series:
         dtstart: 2022-05-24 19:00:00+02:00
         dtend: 2022-05-24 21:00:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Jun 15, 7:00 PM  CEST: **💥 [MAKE SURE TO GRAB A TICKET HERE](https://www.eventbrite.com/e/strv-web3-meetup-vol-2-tickets-359472159907?aff=meetup) 💥**
-
-
-        Join this month’s royal edition of our STR'
-      og_title: STRV Web3 Meetup Vol. 2, Wed, Jun 15, 2022, 7:00 PM   | Meetup
-      url: https://www.meetup.com/strv-meetups/events/286417910/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: STRV Web3 Meetup Vol. 2
         description: 'STRV Meetups
